<?xml version="1.0"?>
<package format="2">
  <name>autobots_controller</name>
  <version>0.0.0</version>
  <description>The autobots_controller package</description>

  <maintainer email="mroglan@todo.todo">mroglan</maintainer>


  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
